// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardRenderer snapshot (T-0006-053) — productive×focus matches snapshot at productive×focus 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "elevation": 2,
      "padding": 20,
      "shadowColor": "rgb(15, 18, 22)",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.06,
      "shadowRadius": 2,
    }
  }
/>
`;

exports[`CardRenderer snapshot (T-0006-058) — expressive×health matches snapshot at expressive×health 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 20,
      "elevation": 2,
      "padding": 20,
      "shadowColor": "rgb(15, 18, 22)",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.06,
      "shadowRadius": 2,
    }
  }
/>
`;
